Fix collapsed layout of profile view page and fix some layout of Tag

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -168,11 +168,16 @@ body{
   border-radius: 10px;
   background: #FFFF99;
 }
-
 .follow-show{
   border: solid 1px #DDDDDD;
   border-radius: 10px;
   background: #FFFF99;
+}
+.follow-member{
+  border: solid 1px #DDDDDD;
+  border-radius: 10px;
+  background: #FFFF99;
+  margin-top: 30px;
 }
 .welcome-img{
   height: 300px;
